--- a/pipeline/iris_classification_pipeline.py.yaml
+++ b/pipeline/iris_classification_pipeline.py.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: iris-classification-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.2, pipelines.kubeflow.org/pipeline_compilation_time: '2021-09-23T15:00:34.017813',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.2, pipelines.kubeflow.org/pipeline_compilation_time: '2021-10-01T13:40:50.554680',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "A basic pipeline example
       for iris classification", "inputs": [{"default": "2", "name": "n_neighbors",
       "optional": true}, {"default": "random", "name": "splitter", "optional": true}],
@@ -17,8 +17,8 @@ spec:
       - {name: splitter}
     dag:
       tasks:
-      - name: train-tree
-        template: train-tree
+      - name: save-tree-model
+        template: save-tree-model
         arguments:
           parameters:
           - {name: splitter, value: '{{inputs.parameters.splitter}}'}
@@ -28,8 +28,8 @@ spec:
       - {name: n_neighbors}
     dag:
       tasks:
-      - name: train-knn
-        template: train-knn
+      - name: save-knn-model
+        template: save-knn-model
         arguments:
           parameters:
           - {name: n_neighbors, value: '{{inputs.parameters.n_neighbors}}'}
@@ -66,7 +66,7 @@ spec:
         arguments:
           parameters:
           - {name: n_neighbors, value: '{{inputs.parameters.n_neighbors}}'}
-  - name: train-knn
+  - name: save-knn-model
     container:
       args: ['python3  iris_classification.py save_final_model knn {{inputs.parameters.n_neighbors}}']
       command: [sh, -c]
@@ -76,13 +76,13 @@ spec:
       - {name: n_neighbors}
     outputs:
       artifacts:
-      - {name: train-knn-output, path: /tmp/knn.pkl}
+      - {name: save-knn-model-output, path: /tmp/knn.pkl}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.2
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-  - name: train-tree
+  - name: save-tree-model
     container:
       args: ['python3  iris_classification.py save_final_model tree {{inputs.parameters.splitter}}']
       command: [sh, -c]
@@ -92,7 +92,7 @@ spec:
       - {name: splitter}
     outputs:
       artifacts:
-      - {name: train-tree-output, path: /tmp/tree.pkl}
+      - {name: save-tree-model-output, path: /tmp/tree.pkl}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.2
